@@ -39,17 +39,17 @@ static NSCharacterSet *validCharacterCharacterSet;
     len = [self length];
     index = (index < len) ? index : len;
 
-    for(i=0;i<index;i++)
+    for (i = 0; i < index; i++)
     {
-        switch([self characterAtIndex:i])
+        switch ([self characterAtIndex:i])
         {
         case 0x000d:
-	    if (i+1<index && [self characterAtIndex:i+1]==0x000a) i++;
-        case 0x000a: 
-        case 0x2028: 
+            if (i + 1 < index && [self characterAtIndex:i + 1] == 0x000a) i++;
+        case 0x000a:
+        case 0x2028:
         case 0x2029:
-	    line++;
-	    break;
+            line++;
+            break;
         }
     }
     return line;
@@ -66,8 +66,7 @@ static NSCharacterSet *validCharacterCharacterSet;
 @implementation NSMutableString(CharacterAppending)
 - (void)appendCharacter:(unichar)character
 {
-    [self appendString:[NSString stringWithCharacters:&character 
-                                               length:1]];
+    [self appendString:[NSString stringWithCharacters:&character length:1]];
 }
 @end
 
@@ -112,10 +111,10 @@ static NSString *_STNormalizeStringToken(NSString *token)
 @implementation STSourceReader
 + (void)initialize
 {
-    NSMutableCharacterSet *set; 
+    NSMutableCharacterSet *set;
 
-    set = [[NSCharacterSet letterCharacterSet] mutableCopy]; 
-    [set addCharactersInString:@"_"]; 
+    set = [[NSCharacterSet letterCharacterSet] mutableCopy];
+    [set addCharactersInString:@"_"];
     identStartCharacterSet = [set copy];
 
     [set formUnionWithCharacterSet:[NSCharacterSet decimalDigitCharacterSet]];
@@ -125,9 +124,8 @@ static NSString *_STNormalizeStringToken(NSString *token)
     
     wsCharacterSet = [NSCharacterSet whitespaceAndNewlineCharacterSet];
     numericCharacterSet = [NSCharacterSet decimalDigitCharacterSet];
-    symbolicSelectorCharacterSet = 
-                    [NSCharacterSet characterSetWithCharactersInString:
-                                                        @"%&*+-,/<=>?@\\~"];
+    symbolicSelectorCharacterSet =
+        [NSCharacterSet characterSetWithCharactersInString:@"%&*+-,/<=>?@\\~"];
 
     RETAIN(wsCharacterSet);
     RETAIN(numericCharacterSet);
@@ -141,14 +139,16 @@ static NSString *_STNormalizeStringToken(NSString *token)
     
     RELEASE(set);
 }
+
 - (void)dealloc
 {
     RELEASE(source);
     [super dealloc];
 }
+
 - initWithString:(NSString *)aString
 {
-    return [self initWithString:aString range:NSMakeRange(0,[aString length])];
+    return [self initWithString:aString range:NSMakeRange(0, [aString length])];
 }
 
 - initWithString:(NSString *)aString range:(NSRange)range
@@ -158,13 +158,13 @@ static NSString *_STNormalizeStringToken(NSString *token)
         source = RETAIN(aString);
         srcRange = range;
         srcOffset = range.location;
-        tokenRange = NSMakeRange(0,0);
+        tokenRange = NSMakeRange(0, 0);
         tokenType = STInvalidTokenType;
     }
     return self;
 }
 
-- (STTokenType) tokenType
+- (STTokenType)tokenType
 {
     return tokenType;
 }
@@ -172,127 +172,116 @@ static NSString *_STNormalizeStringToken(NSString *token)
 - (NSString *)tokenString
 {
 
-    if(tokenType == STStringTokenType)
+    if (tokenType == STStringTokenType)
     {
         return _STNormalizeStringToken([source substringWithRange:tokenRange]);
     }
     else
-    {       
+    {
         return [source substringWithRange:tokenRange];
     }
 }
 
-- (NSRange)tokenRange;
+- (NSRange)tokenRange
 {
     return tokenRange;
 }
 
-- (BOOL) atEnd
+- (BOOL)atEnd
 {
-    return (srcOffset >= NSMaxRange(srcRange));
+    return srcOffset >= NSMaxRange(srcRange);
 }
 
-- (NSInteger) currentLine
+- (NSInteger)currentLine
 {
     return [source lineNumberForIndex:srcOffset];
 }
 
-- (BOOL) eatWhiteSpace
+- (BOOL)eatWhiteSpace
 {
-    unichar uc;
-    
-    for(;;)
+    while (!AT_END)
     {
-        if(AT_END)
-        {
-            return 0;
-        }
-            
-        uc = PEEK_CHAR;
+        unichar uc = PEEK_CHAR;
 
         /* treat comments as whitespace */
-        if(uc == '"')
+        if (uc == '"')
         {
             NSUInteger start = srcOffset;
             do
             {
                 srcOffset++;
-                if(AT_END)
+                if (AT_END)
                 {
-                    tokenRange = NSMakeRange(start, 1);
-                
+                    tokenRange = NSMakeRange(start, srcOffset - start);
+
                     [NSException raise:STCompilerSyntaxException
                                 format:@"Unterminated comment"];
-                    return 1;
+                    return NO;
                 }
-            } while(PEEK_CHAR != '"');
+            }
+            while (PEEK_CHAR != '"');
         }
-        else if([wsCharacterSet characterIsMember:uc] == NO)
+        else if (![wsCharacterSet characterIsMember:uc])
         {
-            return 0;
+            return YES;
         }
         srcOffset++;
     }
-    return 0;
+    return YES;
 }
 
 - (STTokenType)readNextToken
 {
     unichar c;
     NSInteger start;
-    if([self eatWhiteSpace])
+
+    if (![self eatWhiteSpace])
     {
         return STErrorTokenType;
     }
 
-    if(AT_END)
+    if (AT_END)
     {
         return STEndTokenType;
     }
     
-    c = PEEK_CHAR;
+    start = srcOffset;
+    c = GET_CHAR;
 
-    if([identStartCharacterSet characterIsMember:c])
+    if ([identStartCharacterSet characterIsMember:c])
     {
-        BOOL isIdent = YES;
-        
-        start = srcOffset;
-        srcOffset++;
-        
-        isIdent = [identCharacterSet characterIsMember:c];
-
-        while(isIdent)
+        do
         {
-            if(AT_END)
+            if (AT_END)
             {
-                tokenRange = NSMakeRange(start,srcOffset - start);
+                tokenRange = NSMakeRange(start, srcOffset - start);
                 return STIdentifierTokenType;
             }
             
             c = GET_CHAR;
-            isIdent = [identCharacterSet characterIsMember:c];
         }
+        while ([identCharacterSet characterIsMember:c]);
 
-        if(c == ':')
+        if (c == ':')
         {
-            if(AT_END)
+            if (AT_END)
             {
-                tokenRange = NSMakeRange(start,srcOffset - start);
+                tokenRange = NSMakeRange(start, srcOffset - start);
                 return STKeywordTokenType;
             }
 
             c = PEEK_CHAR;
-            if(c == '=')
+            if (c == '=')
             {
                 /* We have found := */
-                srcOffset --;
+                srcOffset--;
 
-                tokenRange = NSMakeRange(start,srcOffset - start);
+                tokenRange = NSMakeRange(start, srcOffset - start);
                 return STIdentifierTokenType;
             }
             else
             {
-                tokenRange = NSMakeRange(start,srcOffset - start);
+                tokenRange = NSMakeRange(start, srcOffset - start);
                 return STKeywordTokenType;
             }
         }
@@ -300,151 +289,136 @@ static NSString *_STNormalizeStringToken(NSString *token)
         {
             /* Put back that character */
             srcOffset--;
-    
-            tokenRange = NSMakeRange(start,srcOffset - start);
+
+            tokenRange = NSMakeRange(start, srcOffset - start);
             return STIdentifierTokenType;
         }
     }
-    else if ( c == '-' || c == '+' || [numericCharacterSet characterIsMember:c])
+    else if (c == '-' || c == '+' || [numericCharacterSet characterIsMember:c])
     {
-        BOOL maybesym = (c == '-' || c == '+');
         BOOL isReal = NO;
-        BOOL isDigit = NO;
-                
-        start = srcOffset;
-        srcOffset++;
 
-        if(AT_END)
+        if (c == '-' || c == '+')
         {
-            tokenRange = NSMakeRange(start, 1);
-            if(maybesym)
+            if (AT_END)
             {
+                tokenRange = NSMakeRange(start, 1);
                 return STBinarySelectorTokenType;
             }
-            else
+
+            /* Take next character and see if it is binary selector */
+            c = GET_CHAR;
+
+            if (![numericCharacterSet characterIsMember:c])
             {
-                return STIntNumberTokenType;
+                if ([symbolicSelectorCharacterSet characterIsMember:c])
+                {
+                    /* Both characters are making one binary selector */
+                    tokenRange = NSMakeRange(start, 2);
+                }
+                else
+                {
+                    /* Other character was neither number nor binary selector
+                       character, so we put it back. */
+                    srcOffset--;
+                    tokenRange = NSMakeRange(start, 1);
+                }
+                return STBinarySelectorTokenType;
             }
         }
 
-        /* Take next character and see if it is binary selector */
-        c = GET_CHAR;
-
-        if(![numericCharacterSet characterIsMember:c] && maybesym)
+        /* c is a digit here */
+        do
         {
-            if([symbolicSelectorCharacterSet characterIsMember:c])
+            if (AT_END)
             {
-                /* Both characters are making one binary selector */
-                tokenRange = NSMakeRange(start,2);
-            }
-            else
-            {
-                /* Other character was neither number nor binary selector
-                   character, so we put it back. */
-                srcOffset--;
-                tokenRange = NSMakeRange(start, 1);
-            }
-
-            return STBinarySelectorTokenType;
-        }
-
-        /* c should be a digit here */
-        isDigit = [numericCharacterSet characterIsMember:c];
-
-        while( isDigit )
-        {
-            if(AT_END)
-            {
-                tokenRange = NSMakeRange(start, srcOffset-start);
+                tokenRange = NSMakeRange(start, srcOffset - start);
                 return STIntNumberTokenType;
             }
             
             c = GET_CHAR;
-            isDigit = [numericCharacterSet characterIsMember:c];
         }
+        while ([numericCharacterSet characterIsMember:c]);
         
-
-        if(c == '.')
+        if (c == '.')
         {
-            if(AT_END)
+            if (AT_END)
             {
                 /* we have read a dot '.' at the end of string, do not treat it
                    as decimal point. We rather put it back and treat it like
                    end of statement. */
- 
                 srcOffset--;
                 tokenRange = NSMakeRange(start, srcOffset - start);
-                  
                 return STIntNumberTokenType;
             }
             
             c = PEEK_CHAR;
-            isDigit = [numericCharacterSet characterIsMember:c];
 
-            if(!isDigit)
+            if (![numericCharacterSet characterIsMember:c])
             {
-                if([wsCharacterSet characterIsMember:c])
+                if ([wsCharacterSet characterIsMember:c])
                 {
                     /* If there is whitespace or newline after a decimal point,
-                       we treat it as dot '.' - end of a statement. We have 
+                       we treat it as dot '.' - end of a statement. We have
                        to put back that dot.
                     */
-                    srcOffset --;
-                    tokenRange = NSMakeRange(start,srcOffset - start);
+                    srcOffset--;
+                    tokenRange = NSMakeRange(start, srcOffset - start);
                     return STIntNumberTokenType;
                 }
                 else
                 {
-                    tokenRange = NSMakeRange(start,srcOffset - start + 1);
+                    tokenRange = NSMakeRange(start, srcOffset - start + 1);
                     [NSException raise:STCompilerSyntaxException
                                 format:@"Invalid character '%c' after decimal point",
                                 c];
                 }
                 return STErrorTokenType;
             }
-    
-            while(isDigit)
+
+            srcOffset++;
+            do
             {
-                if(AT_END)
+                if (AT_END)
                 {
                     tokenRange = NSMakeRange(start, srcOffset - start);
                     return STRealNumberTokenType;
                 }
                 
                 c = GET_CHAR;
-                isDigit = [numericCharacterSet characterIsMember:c];
             }
+            while ([numericCharacterSet characterIsMember:c]);
             
             isReal = YES;
             
-            /* Here we are either at the end or just scanned non-digit 
+            /* Here we are either at the end or just scanned non-digit
                character. */
         }
 
-        if(c == 'e' || c == 'E')
+        if (c == 'e' || c == 'E')
         {
-            if(AT_END)
+            if (AT_END)
             {
-                /* We have reached end of wource without specifying exponent.
-                   This is error. */
+                /* We have reached the end of source without an exponent.
+                   This is an error. */
  
-                tokenRange = NSMakeRange(start,srcOffset - start);
+                tokenRange = NSMakeRange(start, srcOffset - start);
                 [NSException raise:STCompilerSyntaxException
                             format:@"Unexpected end of source. "
                                    @"Exponent is missing."];
                 return STErrorTokenType;
             }
-    
+
             c = GET_CHAR;
             
-            if(c == '+' || c == '-')
+            if (c == '+' || c == '-')
             {
-                if(AT_END)
+                if (AT_END)
                 {
-                    /* We have reached end of wource without specifying exponent.
-                       This is error. */
+                    /* We have reached the end of source without an exponent.
+                       This is an error. */
 
-                    tokenRange = NSMakeRange(start,srcOffset - start);
+                    tokenRange = NSMakeRange(start, srcOffset - start);
                     [NSException raise:STCompilerSyntaxException
                                 format:@"Unexpected end of source. "
                                        @"Exponent is missing after '%c'.", c];
@@ -454,174 +428,158 @@ static NSString *_STNormalizeStringToken(NSString *token)
                 c = GET_CHAR;
             }
             
-            isDigit = [numericCharacterSet characterIsMember:c];
-
-            while(isDigit)
+            while ([numericCharacterSet characterIsMember:c])
             {
-                if(AT_END)
+                if (AT_END)
                 {
                     tokenRange = NSMakeRange(start, srcOffset - start);
                     return STRealNumberTokenType;
                 }
 
                 c = GET_CHAR;
-                isDigit = [numericCharacterSet characterIsMember:c];
             }
-    
-            if([identStartCharacterSet characterIsMember:c])
+
+            if ([identStartCharacterSet characterIsMember:c])
             {
-                tokenRange = NSMakeRange(start,srcOffset - start);
+                tokenRange = NSMakeRange(start, srcOffset - start);
                 [NSException raise:STCompilerSyntaxException
                             format:@"Invalid character '%c' in real number.", c];
                 return STErrorTokenType;
             }
             isReal = YES;
         }
-        else if([identStartCharacterSet characterIsMember:c])
+        else if ([identStartCharacterSet characterIsMember:c])
         {
-            tokenRange = NSMakeRange(start,srcOffset - start);
+            tokenRange = NSMakeRange(start, srcOffset - start);
             [NSException raise:STCompilerSyntaxException
                         format:@"Invalid character '%c' in integer.", c];
             return STErrorTokenType;
         }
         
-        srcOffset --;
-        tokenRange = NSMakeRange(start,srcOffset - start);
+        srcOffset--;
+        tokenRange = NSMakeRange(start, srcOffset - start);
 
-        if([identStartCharacterSet characterIsMember:c] && c != 'e' && c != 'E')
+        if ([identStartCharacterSet characterIsMember:c] &&
+            c != 'e' && c != 'E')
         {
-            tokenRange = NSMakeRange(start,srcOffset - start + 1);
+            tokenRange = NSMakeRange(start, srcOffset - start + 1);
             [NSException raise:STCompilerSyntaxException
                         format:@"Letter '%c' in number", c];
             return STErrorTokenType;
         }
         
-        if(isReal)
-        {
-            return STRealNumberTokenType;
-        }
-        else
-        {
-            return STIntNumberTokenType;
-        }
-        
+        return isReal ? STRealNumberTokenType : STIntNumberTokenType;
     }
     else if ([symbolicSelectorCharacterSet characterIsMember:c])
     {
-        start = srcOffset++;
         c = PEEK_CHAR;
         if ([symbolicSelectorCharacterSet characterIsMember:c])
         {
             srcOffset++;
-            tokenRange = NSMakeRange(start,2);
+            tokenRange = NSMakeRange(start, 2);
         }
         else
-            tokenRange = NSMakeRange(start,1);
+            tokenRange = NSMakeRange(start, 1);
         return STBinarySelectorTokenType;
     }
-    else 
+    else
     {
-        switch(c)
+        switch (c)
         {
         case '$':
-                srcOffset++;
                 c = GET_CHAR;
-                if(AT_END)
+                if (AT_END)
                 {
-                    tokenRange = NSMakeRange(srcOffset-2, 1);
+                    tokenRange = NSMakeRange(start, 1);
                     [NSException raise:STCompilerSyntaxException
                                 format:@"Character expected"];
                     return STErrorTokenType;
-                };
+                }
                 
-                if([validCharacterCharacterSet characterIsMember:c])
+                if ([validCharacterCharacterSet characterIsMember:c])
                 {
                     c = PEEK_CHAR;
-                    if([identCharacterSet characterIsMember:c])
+                    if ([identCharacterSet characterIsMember:c])
                     {
-                        tokenRange = NSMakeRange(srcOffset-2, 3);
+                        tokenRange = NSMakeRange(start, 3);
                         [NSException raise:STCompilerSyntaxException
                                     format:@"Too many characters"];
                         return STErrorTokenType;
                     }
                     
-                    tokenRange = NSMakeRange(srcOffset++,1);\
+                    tokenRange = NSMakeRange(srcOffset++, 1);
                     return STCharacterTokenType;
                 }
 
-                tokenRange = NSMakeRange(srcOffset-2,2);\
+                tokenRange = NSMakeRange(start, 2);
                 [NSException raise:STCompilerSyntaxException
                             format:@"Invalid character literal"];
                 return STErrorTokenType;
 
         case '#':
-                start=srcOffset++;
                 c = PEEK_CHAR;
-                if(c=='(')
+                if (c == '(')
                 {
                     srcOffset++;
-                    tokenRange = NSMakeRange(start,2);
+                    tokenRange = NSMakeRange(start, 2);
                     return STArrayOpenTokenType;
                 }
                 
-                if([identStartCharacterSet characterIsMember:c])
+                if ([identStartCharacterSet characterIsMember:c])
                 {
-                    start=srcOffset++;
-                    while([identCharacterSet characterIsMember:c] || c == ':')
+                    start = srcOffset++;
+                    while ([identCharacterSet characterIsMember:c] || c == ':')
                     {
                         c = GET_CHAR;
-                        if(AT_END)
+                        if (AT_END)
                             break;
                     }
                     srcOffset--;
-                    tokenRange = NSMakeRange(start,srcOffset - start);
+                    tokenRange = NSMakeRange(start, srcOffset - start);
                     return STSymbolTokenType;
                 }
-                tokenRange = NSMakeRange(start,srcOffset - start);
+
+                tokenRange = NSMakeRange(start, 1);
                 return STSharpTokenType;
         case ':':
-                start=srcOffset++;
                 c = PEEK_CHAR;
-                if(c == '=')
+                if (c == '=')
                 {
                     srcOffset++;
-                    tokenRange = NSMakeRange(start,srcOffset - start);
+                    tokenRange = NSMakeRange(start, 2);
                     return STAssignTokenType;
                 }
-                tokenRange = NSMakeRange(start,srcOffset - start);
+                tokenRange = NSMakeRange(start, 1);
                 return STColonTokenType;
 
 #define SIMPLE_TOKEN_RETURN(type) \
-            tokenRange = NSMakeRange(srcOffset++,1);\
+            tokenRange = NSMakeRange(start, 1);\
             return type
             
-        case '(':SIMPLE_TOKEN_RETURN(STLParenTokenType);
-        case ')':SIMPLE_TOKEN_RETURN(STRParenTokenType);
-        case '|':SIMPLE_TOKEN_RETURN(STBarTokenType);
-        case ';':SIMPLE_TOKEN_RETURN(STSemicolonTokenType);
-        case '[':SIMPLE_TOKEN_RETURN(STBlockOpenTokenType);
-        case ']':SIMPLE_TOKEN_RETURN(STBlockCloseTokenType);
-        case '^':SIMPLE_TOKEN_RETURN(STReturnTokenType);
-        case '!':SIMPLE_TOKEN_RETURN(STSeparatorTokenType);
-        case '.':SIMPLE_TOKEN_RETURN(STDotTokenType);
+        case '(': SIMPLE_TOKEN_RETURN(STLParenTokenType);
+        case ')': SIMPLE_TOKEN_RETURN(STRParenTokenType);
+        case '|': SIMPLE_TOKEN_RETURN(STBarTokenType);
+        case ';': SIMPLE_TOKEN_RETURN(STSemicolonTokenType);
+        case '[': SIMPLE_TOKEN_RETURN(STBlockOpenTokenType);
+        case ']': SIMPLE_TOKEN_RETURN(STBlockCloseTokenType);
+        case '^': SIMPLE_TOKEN_RETURN(STReturnTokenType);
+        case '!': SIMPLE_TOKEN_RETURN(STSeparatorTokenType);
+        case '.': SIMPLE_TOKEN_RETURN(STDotTokenType);
         case '\'':
-                start= 1 + srcOffset++;
-                for(;;)
+                for (;;)
                 {
-     
-                    if(AT_END)
+                    if (AT_END)
                     {
-                        tokenRange = NSMakeRange(start-1,1);\
-
+                        tokenRange = NSMakeRange(start, 1);
                         [NSException raise:STCompilerSyntaxException
                                     format:@"Unterminated string"];
                         return STErrorTokenType;
-                    };
+                    }
                     
                     c = GET_CHAR;
-                    if( c=='\\')
+                    if (c == '\\')
                     {
-                        if(AT_END)
+                        if (AT_END)
                         {
                             [NSException raise:STCompilerSyntaxException
                                         format:@"\\ at end"];
@@ -630,27 +588,28 @@ static NSString *_STNormalizeStringToken(NSString *token)
                         
                         GET_CHAR;
                     }
-                    else if( c=='\'' )
+                    else if (c == '\'')
                     {
-                        if(AT_END)
+                        if (AT_END)
                         {
-                            tokenRange = NSMakeRange(start,
-                                                     srcOffset - start - 1);
+                            tokenRange =
+                                NSMakeRange(start + 1, srcOffset - start - 2);
                             return STStringTokenType;
                         }
 
                         c = GET_CHAR;
-                        if(c != '\'')
+                        if (c != '\'')
                         {
                             srcOffset--;
-                            tokenRange = NSMakeRange(start,
-                                                     srcOffset - start - 1);
+                            tokenRange =
+                                NSMakeRange(start + 1, srcOffset - start - 2);
                             return STStringTokenType;
                         }
-                        
                     }
                 }
-        default: return STErrorTokenType;
+        default:
+                tokenRange = NSMakeRange(start, 1);
+                return STErrorTokenType;
         }
     }
 }
