@@ -1,3 +1,8 @@
+2013-06-30  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+    * STSourceReader.m (-lineNumberForIndex:, -readNextToken): Tidy
+    source.
+
 2013-05-26  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
     * STGrammar.y (temporaries): Allow empty list.
